syntax = "proto3";// see: https://protobuf.dev/programming-guides/proto3/

// after compilation, you can access the models under this name.
package proto;
option go_package = ".;proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserReply) {}
  rpc RefreshAccessToken (RefreshTokenRequest) returns (RefreshTokenReply) {}
  rpc LogOutUser (LogOutRequest) returns (LogOutReply) {}
}

service UserProfileService {
  rpc GetUser (GetUserRequest) returns (GetUserReply) {}
}

message GetUserRequest {
    int32 id = 1 ;
}

message GetUserReply {
    int32 id = 1 ;
    string name = 2;
    string email = 3;
}

message Empty {}

enum RoleType {
    ROLETYPE_ADMIN = 0;
    ROLETYPE_CUSTOMER = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    RoleType role = 4;
}

message CreateUserReply {
    string message = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserReply {
    string access_token = 1;
    int64 access_token_age = 2;
    string refresh_token = 3;
    int64 refresh_token_age = 4;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenReply {
    string access_token = 1;
    int64 access_token_age = 2;
}

message LogOutRequest {
    string refresh_token = 1;
    string access_token = 2;
}

message LogOutReply {
    string message = 1;
}